--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ python = "^3.10"
 jsonschema = "^4.23.0"
 rfc3987 = "^1.3.8"
 typer = "^0.12.4"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.17.1"
@@ -73,6 +74,7 @@ bandit = "^1.7.9"
 mypy = "^1.11.1"
 types-simplejson = "^3.19.0.20240801"
 types-jsonschema = "^4.23.0.20240712"
+types-pyyaml = "^6.0.12.20240808"
 
 
 [tool.poetry.group.test-pip-missing-reqs.dependencies]
