--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ commands =
 max-line-length = 88 
 show-source = True
 builtins = _
-ignore = B008,F722,F821
+ignore = B008,F722,F821,TYP006
 exclude = 
     .venv
     .git
