feat: add examples in V2 schemata

--- a/src/ai4_metadata/schemata/ai4-apps-v2.0.0.json
+++ b/src/ai4_metadata/schemata/ai4-apps-v2.0.0.json
@@ -12,23 +12,27 @@
         "title": {
             "description": "Name of the Data Science application.",
             "type": "string",
-            "user_friendly": "Title"
+            "user_friendly": "Title",
+            "example": "Deep Learning Model for Metadata Classification"
         },
         "summary": {
             "description": "Short text describing the value of the Data Science application.",
             "type": "string",
-            "user_friendly": "Summary"
+            "user_friendly": "Summary",
+            "example": "This model classifies metadata using deep learning techniques."
         },
         "description": {
             "description": "Elaborated description of the Data Science application.",
             "type": "string",
-            "user_friendly": "Description"
+            "user_friendly": "Description",
+            "example": "This model uses a deep learning architecture to classify metadata into different categories. The model is trained on a dataset of 10,000 metadata entries and achieves an accuracy of 90%."
         },
         "doi" : {
             "description": "DOI of the Data Science application.",
             "type": "string",
             "format": "doi",
-            "user_friendly": "Digital Object Identifier"
+            "user_friendly": "Digital Object Identifier",
+            "example": "10.5281/zenodo.1234567"
         },
         "links": {
             "title": "links",
@@ -38,49 +42,57 @@
                     "description": "URL pointing to the relevant documentation.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Documentation URL"
+                    "user_friendly": "Documentation URL",
+                    "example": "https://example.org/docs"
                 },
                 "source_code": {
                     "description": "URL pointing to the relevant source code.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Source Code URL"
+                    "user_friendly": "Source Code URL",
+                    "example": "https://example.org/code"
                 },
                 "docker_image": {
                     "description": "URL pointing to the relevant Docker image.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Docker Image URL"
+                    "user_friendly": "Docker Image URL",
+                    "example": "https://example.org/docker"
                 },
                 "zenodo_doi": {
                     "description": "DOI of the Zenodo record.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Link to Zenodo DOI"
+                    "user_friendly": "Link to Zenodo DOI",
+                    "example": "https://doi.org/10.5281/zenodo.1234567"
                 },
                 "dataset": {
                     "description": "URL pointing to the relevant training dataset.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Traning Dataset URL"
+                    "user_friendly": "Traning Dataset URL",
+                    "example": "https://example.org/dataset"
                 },
                 "weights": {
                     "description": "URL of file containing weights from training",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Weights URL"
+                    "user_friendly": "Weights URL",
+                    "example": "https://example.org/weights"
                 },
                 "citation": {
                     "description": "URL pointing to the relevant citation. Please use a Citation File Format (CFF) if possible.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Citation URL"
+                    "user_friendly": "Citation URL",
+                    "example": "https://example.org/citation.cff"
                 },
                 "base_model": {
                     "description": "URL pointing to a base model if this model is a fine-tune, adaptation, etc. of another one.",
                     "type": "string",
                     "format": "uri",
-                    "user_friendly": "Base Model URL"
+                    "user_friendly": "Base Model URL",
+                    "example": "https://example.org/base_model"
                 }
             },
             "required": [
@@ -95,13 +107,15 @@
                     "description": "Creation date of the Data Science application.",
                     "type": "string",
                     "format": "date",
-                    "user_friendly": "Creation Date"
+                    "user_friendly": "Creation Date",
+                    "example": "2022-01-01"
                 },
                 "updated": {
                     "description": "Last update date of the Data Science application.",
                     "type": "string",
                     "format": "date",
-                    "user_friendly": "Last Update Date"
+                    "user_friendly": "Last Update Date",
+                    "example": "2024-12-31"
                 }
             },
             "required": [
@@ -126,7 +140,8 @@
                     "Other"
                 ]
             },
-            "user_friendly": "Libraries used"
+            "user_friendly": "Libraries used",
+            "example": ["TensorFlow", "PyTorch"]
         },
         "tasks": {
             "description": "Topic/s for the tasks that categorize the Data Science application.",
@@ -153,7 +168,8 @@
                     "Other"
                 ]
             },
-            "user_friendly": "Model Tasks"
+            "user_friendly": "Model Tasks",
+            "example": ["Computer Vision", "Natural Language Processing"]
         },
         "categories": {
             "description": "Platform categories for the tasks that categorize the Data Science application.",
@@ -168,7 +184,8 @@
                     "AI4 tools"
                 ]
             },
-            "user_friendly": "AI4 Platform Categories"
+            "user_friendly": "AI4 Platform Categories",
+            "example": ["AI4 pre trained", "AI4 trainable"]
         },
         "tags": {
             "description": "User provided tags to best describe the Data Science application.",
@@ -176,7 +193,9 @@
             "uniqueItems": true,
             "items": {
                 "type": "string"
-            }
+            },
+            "user_friendly": "Tags",
+            "example": ["Deep Learning", "Metadata Classification"]
         },
         "data-type": {
             "description": "Data type used in the Data Science application.",
@@ -195,7 +214,8 @@
                     "Other"
                 ]
             },
-            "user_friendly": "Data Type"
+            "user_friendly": "Data Type",
+            "example": ["Text"]
         }
     },
     "required": [
