ci: Add mypy to linters

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ skipdist = true
 python =
     3.10: py310
     3.11: py311
-    3.12: py312, flake8, black, bandit, pip-missing-reqs, pypi
+    3.12: py312, flake8, black, bandit, pip-missing-reqs, pypi, mypy
 
 [base]
 python = python3.12
