tests: remove bandit skipped tests

--- a/tox.ini
+++ b/tox.ini
@@ -104,7 +104,7 @@ commands =
 [testenv:bandit]
 basepython = {[base]python}
 commands = 
-    poetry run bandit -r src/{[base]package} -x tests -s B110,B410
+    poetry run bandit -r src/{[base]package} -x tests 
 
 [testenv:pypi]
 basepython = {[base]python}
