--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ jsonschema = "^4.23.0"
 rfc3987 = "^1.3.8"
 typer = "^0.12.4"
 pyyaml = "^6.0.2"
+rdflib = "^7.1.3"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.17.1"
