fix: license is not mandatory, but this does not meat it cannot be included

--- a/src/ai4_metadata/schemata/ai4-apps-v2.1.0.json
+++ b/src/ai4_metadata/schemata/ai4-apps-v2.1.0.json
@@ -290,8 +290,7 @@
             { "required": ["dataset_url"] },
             { "required": ["cite_url"] },
             { "required": ["date_creation"] },
-            { "required": ["keywords"] },
-            { "required": ["license"] }
+            { "required": ["keywords"] }
         ]
     }
 }
