--- a/src/ai4_metadata/schemata/ai4-apps-v2.0.0.json
+++ b/src/ai4_metadata/schemata/ai4-apps-v2.0.0.json
@@ -236,8 +236,7 @@
             { "required": ["dataset_url"] },
             { "required": ["cite_url"] },
             { "required": ["date_creation"] },
-            { "required": ["keywords"] },
-            { "required": ["license"] }   
+            { "required": ["keywords"] }
         ]
     }
 }
