ci: use CI based for SonarQube

--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,15 @@ commands =
            --cov-report term \
            --cov-report=html
 
+[testenv:covxml]
+basepython = python3.12
+commands_pre =
+    poetry install --no-root --sync --with test
+commands =
+    find . -type f -name "*.pyc" -delete
+    poetry run pytest {posargs} --cov={[base]package} \
+           --cov-report=xml
+
 [flake8]
 # Black default line length is 88
 max-line-length = 88 
