--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,26 @@ jobs:
         python -m pip install poetry poetry poetry-plugin-export
     - name: Test with tox
       run: tox
+
+  sonarqube:
+    name: SonarQube Cloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install tox and any other packages
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox tox-gh-actions
+          python -m pip install poetry poetry poetry-plugin-export
+      - name: Run tox
+        run: tox -e covxml
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
