docs: Create initial documentation and build via RTD

--- a/tox.ini
+++ b/tox.ini
@@ -136,3 +136,11 @@ commands =
     poetry export -o tmp/requirements.txt
     poetry run pip-missing-reqs --requirements-file tmp/requirements.txt --ignore-file=data/* --ignore-file={[base]package}/tests/* {[base]package}
     rm tmp/requirements.txt
+
+[testenv:docs]
+basepython = {[base]python}
+commands_pre =
+    poetry install --no-root --sync --with test,docs
+commands =
+    rm -rf doc/build
+    poetry run sphinx-build -W --keep-going -b html -j auto docs/source docs/build/html
