--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ ai4-metadata-migrate = "ai4_metadata.migrate:_migrate_main"
 ai4-metadata = "ai4_metadata.cli:app"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 jsonschema = "^4.23.0"
 rfc3987 = "^1.3.8"
 typer = "^0.12.4"
@@ -83,6 +83,12 @@ poetry-plugin-export = "^1.8.0"
 
 [tool.poetry.group.test-pypi.dependencies]
 poetry = "^1.8.3"
+
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^8.2.3"
+sphinx-copybutton = "^0.5.2"
+piccolo-theme = "^0.24.0"
 
 [build-system]
 requires = ["poetry-core"]
