--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,8 +5,6 @@
 # Required
 version: 2
 
-formats: all
-
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-24.04
@@ -16,6 +14,14 @@ build:
   jobs:
     install:
       - pip install poetry tox
+      - poetry install --no-root --sync --with test,docs
     build:
       html:
-        - tox -e docs
+        - mkdir -p $READTHEDOCS_OUTPUT/html/
+        - poetry run sphinx-build -W --keep-going -b html -j auto docs/source $READTHEDOCS_OUTPUT/html
+
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  builder: html
+  configuration: docs/source/conf.py
