tests: improve unit testing

--- a/tox.ini
+++ b/tox.ini
@@ -86,7 +86,7 @@ commands =
 max-line-length = 88 
 show-source = True
 builtins = _
-ignore = B008,F722,F821,TYP006
+ignore = B008,F722,F821,TYP006,W503
 exclude = 
     .venv
     .git
