tests: poetry --sync is deprecated

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ setenv =
    VIRTUAL_ENV={envdir}
    LC_ALL=en_US.utf-8
 commands_pre =
-    poetry install --no-root --sync --with test,test-{envname}
+    poetry sync --no-root --with test,test-{envname}
 commands =
     find . -type f -name "*.pyc" -delete
     poetry run pytest {posargs}
@@ -45,27 +45,27 @@ commands =
 [testenv:py311]
 basepython = python3.11
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 
 [testenv:py312]
 basepython = python3.12
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 
 [testenv:py313]
 basepython = python3.13
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 
 [testenv:py314]
 basepython = python3.14
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 
 [testenv:cov]
 basepython = python3.12
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 commands =
     find . -type f -name "*.pyc" -delete
     poetry run pytest {posargs} --cov={[base]package} \
@@ -75,7 +75,7 @@ commands =
 [testenv:covxml]
 basepython = python3.12
 commands_pre =
-    poetry install --no-root --sync --with test
+    poetry sync --no-root --with test
 commands =
     find . -type f -name "*.pyc" -delete
     poetry run pytest {posargs} --cov={[base]package} \
@@ -136,7 +136,7 @@ commands =
 [testenv:docs]
 basepython = {[base]python}
 commands_pre =
-    poetry install --no-root --sync --with test,docs
+    poetry sync --no-root --with test,docs
 commands =
     rm -rf doc/build
     poetry run sphinx-build -W --keep-going -b html -j auto docs/source docs/build/html
