tests: fix erroneous tests and linters

--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,11 @@ skipdist = true
 [gh-actions]
 python =
     3.11: py311
-    3.12: py312, flake8, black, bandit, pip-missing-reqs, pypi, mypy
-    3.13: py313
+    3.12: py312
+    3.13: py313, flake8, black, bandit, pip-missing-reqs, pypi, mypy
 
 [base]
-python = python3.12
+python = python3.13
 package = ai4_metadata
 
 [pytest]
@@ -139,4 +139,4 @@ commands_pre =
     poetry sync --no-root --with test,docs
 commands =
     rm -rf doc/build
-    poetry run sphinx-build -W --keep-going -b html -j auto docs/source docs/build/html
+    poetry run sphinx-build -W --write-all --fresh-env --keep-going -b html -j auto docs/source docs/build/html 
