--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ mypy = "^1.11.1"
 types-simplejson = "^3.19.0.20240801"
 types-jsonschema = "^4.23.0.20240712"
 types-pyyaml = "^6.0.12.20240808"
+docutils = "^0.21.2"
+types-docutils = "^0.21.0.20250604"
 
 
 [tool.poetry.group.test-pip-missing-reqs.dependencies]
@@ -82,13 +84,14 @@ poetry-plugin-export = "^1.8.0"
 
 
 [tool.poetry.group.test-pypi.dependencies]
-poetry = "^1.8.3"
+poetry = "^2.0.0"
 
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.2.3"
 sphinx-copybutton = "^0.5.2"
 piccolo-theme = "^0.24.0"
+docutils = "^0.21.2"
 
 
 [tool.poetry.group.tests.dependencies]
