--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ sphinx = "^8.2.3"
 sphinx-copybutton = "^0.5.2"
 piccolo-theme = "^0.24.0"
 docutils = "^0.21.2"
+rdflib = "^7.1.4"
 
 
 [tool.poetry.group.tests.dependencies]
