--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,7 +14,7 @@ build:
   jobs:
     install:
       - pip install poetry tox
-      - poetry install --no-root --sync --with test,docs
+      - poetry sync --with test,docs
     build:
       html:
         - mkdir -p $READTHEDOCS_OUTPUT/html/
