--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ ai4-metadata = "ai4_metadata.cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-jsonschema = "^4.23.0"
+jsonschema = "^4.25.0"
 rfc3987 = "^1.3.8"
 typer = "^0.12.4"
 pyyaml = "^6.0.2"
@@ -72,7 +72,7 @@ bandit = "^1.7.9"
 [tool.poetry.group.test-mypy.dependencies]
 mypy = "^1.11.1"
 types-simplejson = "^3.19.0.20240801"
-types-jsonschema = "^4.23.0.20240712"
+types-jsonschema = "^4.25.0"
 types-pyyaml = "^6.0.12.20240808"
 docutils = "^0.21.2"
 types-docutils = "^0.21.0.20250604"
